<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/background_dark"
    tools:context="com.example.bjorn.shop.MainActivity">

    <Button
        android:text="@string/SAFR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/browse"
        android:layout_toRightOf="@+id/browse"
        android:layout_toEndOf="@+id/browse"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:id="@+id/afr" />

    <TextView
        android:layout_width="1000dp"
        android:layout_height="50dp"
        android:text="@string/welcome"
        android:textSize="22dp"
        android:fontFamily="cursive"
        android:textColor="@android:color/holo_red_dark"
        android:textAlignment="center"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="163dp"
        android:id="@+id/browse" />

    <Button
        android:text="@string/e_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/explicit"
        android:layout_below="@+id/afr"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <Button
        android:text="@string/optionMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/explicit"
        android:layout_toRightOf="@+id/explicit"
        android:layout_toEndOf="@+id/explicit"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:id="@+id/option" />

    <Button
        android:text="@string/service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/afr"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:id="@+id/service" />

    <Button
        android:text="@string/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:id="@+id/stop" />
</RelativeLayout>
