<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_browse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/holo_purple"
    tools:context="com.example.bjorn.shop.browse">

    <TextView
        android:text="@string/messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20dp"
        android:textColor="@android:color/holo_blue_light"
        android:id="@+id/textView" />

    <Button
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/back" />

    <Button
        android:text="@string/longToast2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/longToast2"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />

    <Button
        android:text="@string/longToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/longToast"
        android:layout_below="@+id/longToast2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/shortToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shortToast"
        android:layout_below="@+id/longToast"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp" />

    <Button
        android:text="@string/shortToast2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shortToast2"
        android:layout_below="@+id/longToast"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
